; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-audio-decoder.c_drop_late_packets.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-audio-decoder.c_drop_late_packets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_decoder = type { i32 }
%struct.ff_packet = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@AV_NOPTS_VALUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ff_decoder*, %struct.ff_packet*)* @drop_late_packets to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drop_late_packets(%struct.ff_decoder* %0, %struct.ff_packet* %1) #0 {
  %3 = alloca %struct.ff_decoder*, align 8
  %4 = alloca %struct.ff_packet*, align 8
  %5 = alloca i64, align 8
  store %struct.ff_decoder* %0, %struct.ff_decoder** %3, align 8
  store %struct.ff_packet* %1, %struct.ff_packet** %4, align 8
  %6 = load %struct.ff_decoder*, %struct.ff_decoder** %3, align 8
  %7 = getelementptr inbounds %struct.ff_decoder, %struct.ff_decoder* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i64 @ff_clock_start_time(i32 %8)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @AV_NOPTS_VALUE, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %30

13:                                               ; preds = %2
  %14 = load %struct.ff_decoder*, %struct.ff_decoder** %3, align 8
  %15 = load i64, i64* %5, align 8
  %16 = load %struct.ff_packet*, %struct.ff_packet** %4, align 8
  %17 = getelementptr inbounds %struct.ff_packet, %struct.ff_packet* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @ff_decoder_set_frame_drop_state(%struct.ff_decoder* %14, i64 %15, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %13
  %23 = load %struct.ff_packet*, %struct.ff_packet** %4, align 8
  %24 = load %struct.ff_packet*, %struct.ff_packet** %4, align 8
  %25 = getelementptr inbounds %struct.ff_packet, %struct.ff_packet* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @shrink_packet(%struct.ff_packet* %23, i32 %27)
  br label %29

29:                                               ; preds = %22, %13
  br label %30

30:                                               ; preds = %29, %2
  ret void
}

declare dso_local i64 @ff_clock_start_time(i32) #1

declare dso_local i64 @ff_decoder_set_frame_drop_state(%struct.ff_decoder*, i64, i32) #1

declare dso_local i32 @shrink_packet(%struct.ff_packet*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
